fix: make tabs wrap for smallest screen widths

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,9 @@ html {
 #tabs {
 	display: flex;
 	flex-flow: row;
+	flex-wrap: wrap;
 	width: 100%;
+	margin-block-start: 2rem;
 }
 
 .tab {
@@ -20,6 +22,7 @@ html {
 	border: 1px solid black;
 	padding: 5px;
 	cursor: pointer;
+	margin-block: 0;
 }
 
 .tab.active {
